--- a/public/styles/responsive.css
+++ b/public/styles/responsive.css
@@ -1,5 +1,5 @@
 
-@media (max-widht:900px) {
+@media (max-width: 900px) {
     #page-home {
       background-position-x: 70vw;
   }
@@ -27,6 +27,14 @@
 
   #page-search-results .cards img {
     height: 250px;
+  }
+
+  #page-create-point .field-group {
+    flex-direction: column;
+  }
+
+  #page-create-point .field-group .field + .field {
+    margin-left: 0;
   }
 
 }
