--- a/public/styles/search-results.css
+++ b/public/styles/search-results.css
@@ -1,3 +1,18 @@
+body {
+  background-color: white;
+}
+
+body::after {
+  content: "";
+  position: absolute;
+  background: #dfdfdf;
+  top: 260px;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  z-index: -1;
+}
+
 #page-search-results {
   width: 90%;
   max-width: 1100px;
