--- a/src/views/search-results.html
+++ b/src/views/search-results.html
@@ -1,65 +1,75 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Criar um ponto de coleta</title>
+{% extends "layout.html" %}
 
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
+{% set pageId = "page-search-results" %}
 
-  <link rel="stylesheet" href="/styles/main.css">
+{% block title %}
+  <title>Resultado da pesquisa</title>
+
+{% endblock title %}
+
+{% block styles %}
   <link rel="stylesheet" href="/styles/search-results.css">
-  
-  <link rel="stylesheet" href="/styles/responsive.css">  
 
-</head>
-<body>
+{% endblock styles %}
 
-  <div id="page-search-results">
+{% block content %}
+  {% include "partials/page-header.html" %}
 
-    <header>
-     <img src="/assets/logo.svg" alt="logomarca">
+  <main>
 
-      <a href="index.html">
-        <span></span>
-        Voltar para home
-      </a>
-    </header>
-
-    <main>
-      <h4>
-        <strong>2 pontos</strong> encontrados
-      </h4>
+    {% if total > 0 %}
+        <h4>
+          <strong>{{total}} pontos</strong>
+          encontrados
+        </h4>
 
       <div class="cards">
-        <div class="card">
-          <img src="https://images.unsplash.com/photo-1528323273322-d81458248d40?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1101&q=80" alt="Colectoria">
-          <h1>Colectoria</h1>
-          <h3>Resíduos Eletrônicos, lâmpadas</h3>
-          <p>
-            Rio do Sul, Santa Catarina <br/>
-            Guilherme Gemballa, Jardim América <br/>
-            Número 260
-          </p>
-        </div>
-        
-        <div class="card">
-          <img src="https://images.unsplash.com/photo-1567393528677-d6adae7d4a0a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" alt="Papersider">
-          <h1>Papersider</h1>
-          <h3>Papéis e Papelão</h3>
-          <p>
-            Rio do Sul, Santa Catarina <br/>
-            Guilherme Gemballa, Jardim América <br/>
-            Número 260
-          </p>
-        </div>        
+
+        {% for place in places %}
+              <div class="card">
+                  <img src="{{ place.image }}" alt="{{ place.name }}">
+                  <h1>{{ place.name }}</h1>
+                  <h3>{{ place.items }}</h3>
+                  <p>
+                    {{ place.city }}, {{ place.state }}
+                    <br/>
+                    {{ place.address }}
+                    <br/>
+                    {{ place.address2 }}
+                  </p>
+              </div>
+
+              
+
+          {% endfor %}
+
+              {# não concegui utilizar essa tabela do papersider utilizando nunjucks #}
+          {# <div class="card">
+                  <img src="https://images.unsplash.com/photo-1567393528677-d6adae7d4a0a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" alt="Papersider">
+                  <h1>Papersider</h1>
+                  <h3>Papéis e Papelão</h3>
+                  <p>
+                    Rio do Sul, Santa Catarina
+                    <br/>
+                    Guilherme Gemballa, Jardim América
+                    <br/>
+                    Número 260
+                  </p>
+              </div> #}
+
+      
+
+     
       </div>
 
 
-    </main>
+    {%else%}
 
-  </div>  
+        <h4><strong>Nenhum</strong> local encontrado
+        </h4>
 
+    {% endif %}
 
-</body>
-</html>
+    
+  </main>
+{% endblock content %}
